--- a/branches/branch-playground/plugins/_core/managerbase.ui
+++ b/branches/branch-playground/plugins/_core/managerbase.ui
@@ -1,153 +1,149 @@
-<ui version="4.0" stdsetdef="1" >
-  <author></author>
-  <comment></comment>
-  <exportmacro></exportmacro>
-  <class>ConnectionManagerBase</class>
-  <widget class="QDialog" name="Connection" >
-    <property name="geometry" stdset="0" >
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>306</width>
-        <height>252</height>
-      </rect>
-    </property>
-    <property name="windowTitle" stdset="0" >
-      <string>Connection manager</string>
-    </property>
-    <property name="sizeGripEnabled" stdset="0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
+ <class>Connection</class>
+ <widget class="QDialog" name="Connection">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>306</width>
+    <height>252</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
+   <string>Connection manager</string>
+  </property>
+  <property name="sizeGripEnabled">
+   <bool>true</bool>
+  </property>
+  <layout class="QGridLayout">
+   <property name="margin">
+    <number>11</number>
+   </property>
+   <property name="spacing">
+    <number>6</number>
+   </property>
+   <item row="2" column="2">
+    <widget class="QPushButton" name="btnUpdate">
+     <property name="text">
+      <string>&amp;Configure</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="2">
+    <widget class="QPushButton" name="btnUp">
+     <property name="text">
+      <string>&amp;Up</string>
+     </property>
+     <property name="autoDefault">
       <bool>true</bool>
-    </property>
-    <layout class="QGridLayout" >
-      <property name="margin" stdset="0" >
-        <number>11</number>
-      </property>
-      <property name="spacing" stdset="0" >
-        <number>6</number>
-      </property>
-      <item row="2" column="1" >
-        <widget class="QPushButton" name="btnUpdate" >
-          <property name="text" stdset="0" >
-            <string>&amp;Configure</string>
-          </property>
-        </widget>
-      </item>
-      <item row="0" column="1" >
-        <widget class="QPushButton" name="btnUp" >
-          <property name="text" stdset="0" >
-            <string>&amp;Up</string>
-          </property>
-          <property name="autoDefault" stdset="0" >
-            <bool>true</bool>
-          </property>
-        </widget>
-      </item>
-      <item rowspan="6" row="0" column="0" colspan="1" >
-        <widget class="Q3ListView" name="lstConnection" >
-          <column>
-            <property name="text" >
-              <string>Connection</string>
-            </property>
-            <property name="clickable" >
-              <bool>true</bool>
-            </property>
-            <property name="resizable" >
-              <bool>true</bool>
-            </property>
-          </column>
-        </widget>
-      </item>
-      <item row="1" column="1" >
-        <widget class="QPushButton" name="btnDown" >
-          <property name="text" stdset="0" >
-            <string>&amp;Down</string>
-          </property>
-        </widget>
-      </item>
-      <item row="4" column="1" >
-        <widget class="QPushButton" name="btnRemove" >
-          <property name="text" stdset="0" >
-            <string>&amp;Remove</string>
-          </property>
-        </widget>
-      </item>
-      <item row="3" column="1" >
-        <widget class="QPushButton" name="btnAdd" >
-          <property name="text" stdset="0" >
-            <string>&amp;New connection</string>
-          </property>
-        </widget>
-      </item>
-      <item row="5" column="1" >
-        <spacer name="Spacer4" >
-          <property name="sizeHint" >
-            <size>
-              <width>20</width>
-              <height>20</height>
-            </size>
-          </property>
-          <property name="sizeType" >
-            <enum>QSizePolicy::Expanding</enum>
-          </property>
-          <property name="orientation" >
-            <enum>Qt::Vertical</enum>
-          </property>
-        </spacer>
-      </item>
-      <item rowspan="1" row="6" column="0" colspan="2" >
-        <layout class="QHBoxLayout" >
-          <property name="margin" stdset="0" >
-            <number>0</number>
-          </property>
-          <property name="spacing" stdset="0" >
-            <number>6</number>
-          </property>
-          <item>
-            <spacer name="Horizontal Spacing2" >
-              <property name="sizeHint" >
-                <size>
-                  <width>20</width>
-                  <height>20</height>
-                </size>
-              </property>
-              <property name="sizeType" >
-                <enum>QSizePolicy::Expanding</enum>
-              </property>
-              <property name="orientation" >
-                <enum>Qt::Horizontal</enum>
-              </property>
-            </spacer>
-          </item>
-          <item>
-            <widget class="QPushButton" name="buttonCancel" >
-              <property name="text" stdset="0" >
-                <string>&amp;Close</string>
-              </property>
-              <property name="autoDefault" stdset="0" >
-                <bool>true</bool>
-              </property>
-            </widget>
-          </item>
-        </layout>
-      </item>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="2">
+    <widget class="QPushButton" name="btnDown">
+     <property name="text">
+      <string>&amp;Down</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="2">
+    <widget class="QPushButton" name="btnRemove">
+     <property name="text">
+      <string>&amp;Remove</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="2">
+    <widget class="QPushButton" name="btnAdd">
+     <property name="text">
+      <string>&amp;New connection</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="2">
+    <spacer name="Spacer4">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Expanding</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="6" column="1" colspan="2">
+    <layout class="QHBoxLayout">
+     <property name="spacing">
+      <number>6</number>
+     </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
+     <item>
+      <spacer name="Horizontal Spacing2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Expanding</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="buttonCancel">
+       <property name="text">
+        <string>&amp;Close</string>
+       </property>
+       <property name="autoDefault">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
     </layout>
-  </widget>
-  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
-  <tabstops>
-    <tabstop>lstConnection</tabstop>
-    <tabstop>btnUp</tabstop>
-    <tabstop>btnDown</tabstop>
-    <tabstop>btnUpdate</tabstop>
-    <tabstop>btnAdd</tabstop>
-    <tabstop>btnRemove</tabstop>
-    <tabstop>buttonCancel</tabstop>
-  </tabstops>
-  <connections>
-    <connection>
-      <sender>buttonCancel</sender>
-      <signal>clicked()</signal>
-      <receiver>Connection</receiver>
-      <slot>reject()</slot>
-    </connection>
-  </connections>
+   </item>
+   <item row="0" column="0" rowspan="7">
+    <widget class="QListWidget" name="lstConnection"/>
+   </item>
+  </layout>
+ </widget>
+ <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <tabstops>
+  <tabstop>btnUp</tabstop>
+  <tabstop>btnDown</tabstop>
+  <tabstop>btnUpdate</tabstop>
+  <tabstop>btnAdd</tabstop>
+  <tabstop>btnRemove</tabstop>
+  <tabstop>buttonCancel</tabstop>
+ </tabstops>
+ <resources/>
+ <connections>
+  <connection>
+   <sender>buttonCancel</sender>
+   <signal>clicked()</signal>
+   <receiver>Connection</receiver>
+   <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
