--- a/branches/branch-playground/plugins/_core/toolsetupbase.ui
+++ b/branches/branch-playground/plugins/_core/toolsetupbase.ui
@@ -1,271 +1,256 @@
-<ui version="4.0" stdsetdef="1" >
-  <author></author>
-  <comment></comment>
-  <exportmacro></exportmacro>
-  <class>ToolBarSetupBase</class>
-  <widget class="QDialog" name="ToolBarSetup" >
-    <property name="geometry" stdset="0" >
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>404</width>
-        <height>252</height>
-      </rect>
-    </property>
-    <property name="windowTitle" stdset="0" >
-      <string>Toolbar setup</string>
-    </property>
-    <layout class="QVBoxLayout" >
-      <property name="margin" stdset="0" >
-        <number>11</number>
-      </property>
-      <property name="spacing" stdset="0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
+ <class>ToolBarSetup</class>
+ <widget class="QDialog" name="ToolBarSetup">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>404</width>
+    <height>252</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
+   <string>Toolbar setup</string>
+  </property>
+  <layout class="QVBoxLayout">
+   <property name="spacing">
+    <number>6</number>
+   </property>
+   <property name="margin">
+    <number>11</number>
+   </property>
+   <item>
+    <layout class="QHBoxLayout">
+     <property name="spacing">
+      <number>6</number>
+     </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
+     <item>
+      <layout class="QVBoxLayout">
+       <property name="spacing">
         <number>6</number>
-      </property>
-      <item>
-        <layout class="QHBoxLayout" >
-          <property name="margin" stdset="0" >
-            <number>0</number>
-          </property>
-          <property name="spacing" stdset="0" >
-            <number>6</number>
-          </property>
-          <item>
-            <layout class="QVBoxLayout" >
-              <property name="margin" stdset="0" >
-                <number>0</number>
-              </property>
-              <property name="spacing" stdset="0" >
-                <number>6</number>
-              </property>
-              <item>
-                <widget class="QLabel" name="TextLabel1" >
-                  <property name="text" stdset="0" >
-                    <string>All buttons:</string>
-                  </property>
-                  <property name="wordWrap" >
-                    <bool>false</bool>
-                  </property>
-                </widget>
-              </item>
-              <item>
-                <widget class="Q3ListBox" name="lstButtons" >
-                  <item>
-                    <property name="text" >
-                      <string>New Item</string>
-                    </property>
-                  </item>
-                </widget>
-              </item>
-            </layout>
-          </item>
-          <item>
-            <layout class="QVBoxLayout" >
-              <property name="margin" stdset="0" >
-                <number>0</number>
-              </property>
-              <property name="spacing" stdset="0" >
-                <number>6</number>
-              </property>
-              <item>
-                <spacer name="Spacer2" >
-                  <property name="sizeHint" >
-                    <size>
-                      <width>20</width>
-                      <height>20</height>
-                    </size>
-                  </property>
-                  <property name="sizeType" >
-                    <enum>QSizePolicy::Expanding</enum>
-                  </property>
-                  <property name="orientation" >
-                    <enum>Qt::Vertical</enum>
-                  </property>
-                </spacer>
-              </item>
-              <item>
-                <widget class="QPushButton" name="btnAdd" >
-                  <property name="text" stdset="0" >
-                    <string>&amp;Add -></string>
-                  </property>
-                </widget>
-              </item>
-              <item>
-                <widget class="QPushButton" name="btnRemove" >
-                  <property name="text" stdset="0" >
-                    <string>&lt;- &amp;Remove</string>
-                  </property>
-                </widget>
-              </item>
-              <item>
-                <spacer name="Spacer3" >
-                  <property name="sizeHint" >
-                    <size>
-                      <width>20</width>
-                      <height>20</height>
-                    </size>
-                  </property>
-                  <property name="sizeType" >
-                    <enum>QSizePolicy::Expanding</enum>
-                  </property>
-                  <property name="orientation" >
-                    <enum>Qt::Vertical</enum>
-                  </property>
-                </spacer>
-              </item>
-            </layout>
-          </item>
-          <item>
-            <layout class="QVBoxLayout" >
-              <property name="margin" stdset="0" >
-                <number>0</number>
-              </property>
-              <property name="spacing" stdset="0" >
-                <number>6</number>
-              </property>
-              <item>
-                <widget class="QLabel" name="TextLabel2" >
-                  <property name="text" stdset="0" >
-                    <string>Active:</string>
-                  </property>
-                  <property name="wordWrap" >
-                    <bool>false</bool>
-                  </property>
-                </widget>
-              </item>
-              <item>
-                <widget class="Q3ListBox" name="lstActive" >
-                  <item>
-                    <property name="text" >
-                      <string>New Item</string>
-                    </property>
-                  </item>
-                </widget>
-              </item>
-            </layout>
-          </item>
-          <item>
-            <layout class="QVBoxLayout" >
-              <property name="margin" stdset="0" >
-                <number>0</number>
-              </property>
-              <property name="spacing" stdset="0" >
-                <number>6</number>
-              </property>
-              <item>
-                <spacer name="Spacer4" >
-                  <property name="sizeHint" >
-                    <size>
-                      <width>20</width>
-                      <height>20</height>
-                    </size>
-                  </property>
-                  <property name="sizeType" >
-                    <enum>QSizePolicy::Expanding</enum>
-                  </property>
-                  <property name="orientation" >
-                    <enum>Qt::Vertical</enum>
-                  </property>
-                </spacer>
-              </item>
-              <item>
-                <widget class="QPushButton" name="btnUp" >
-                  <property name="text" stdset="0" >
-                    <string>&amp;Up</string>
-                  </property>
-                </widget>
-              </item>
-              <item>
-                <widget class="QPushButton" name="btnDown" >
-                  <property name="text" stdset="0" >
-                    <string>&amp;Down</string>
-                  </property>
-                </widget>
-              </item>
-              <item>
-                <spacer name="Spacer5" >
-                  <property name="sizeHint" >
-                    <size>
-                      <width>20</width>
-                      <height>20</height>
-                    </size>
-                  </property>
-                  <property name="sizeType" >
-                    <enum>QSizePolicy::Expanding</enum>
-                  </property>
-                  <property name="orientation" >
-                    <enum>Qt::Vertical</enum>
-                  </property>
-                </spacer>
-              </item>
-            </layout>
-          </item>
-        </layout>
-      </item>
-      <item>
-        <widget class="Line" name="Line1" >
-          <property name="frameShape" stdset="0" >
-            <enum>QFrame::HLine</enum>
-          </property>
-          <property name="frameShadow" stdset="0" >
-            <enum>QFrame::Sunken</enum>
-          </property>
-          <property name="frameShape" stdset="0" >
-            <enum>QFrame::HLine</enum>
-          </property>
+       </property>
+       <property name="margin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="QLabel" name="TextLabel1">
+         <property name="text">
+          <string>All buttons:</string>
+         </property>
+         <property name="wordWrap">
+          <bool>false</bool>
+         </property>
         </widget>
-      </item>
-      <item>
-        <layout class="QHBoxLayout" >
-          <property name="margin" stdset="0" >
-            <number>0</number>
-          </property>
-          <property name="spacing" stdset="0" >
-            <number>6</number>
-          </property>
-          <item>
-            <spacer name="Spacer4_2" >
-              <property name="sizeHint" >
-                <size>
-                  <width>20</width>
-                  <height>20</height>
-                </size>
-              </property>
-              <property name="sizeType" >
-                <enum>QSizePolicy::Expanding</enum>
-              </property>
-              <property name="orientation" >
-                <enum>Qt::Horizontal</enum>
-              </property>
-            </spacer>
-          </item>
-          <item>
-            <widget class="QPushButton" name="btnApply" >
-              <property name="text" stdset="0" >
-                <string>&amp;Apply</string>
-              </property>
-            </widget>
-          </item>
-          <item>
-            <widget class="QPushButton" name="btnOk" >
-              <property name="text" stdset="0" >
-                <string>&amp;OK</string>
-              </property>
-              <property name="default" stdset="0" >
-                <bool>true</bool>
-              </property>
-            </widget>
-          </item>
-          <item>
-            <widget class="QPushButton" name="btnClose" >
-              <property name="text" stdset="0" >
-                <string>&amp;Close</string>
-              </property>
-            </widget>
-          </item>
-        </layout>
-      </item>
+       </item>
+       <item>
+        <widget class="QListWidget" name="lstButtons"/>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QVBoxLayout">
+       <property name="spacing">
+        <number>6</number>
+       </property>
+       <property name="margin">
+        <number>0</number>
+       </property>
+       <item>
+        <spacer name="Spacer2">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::Expanding</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btnAdd">
+         <property name="text">
+          <string>&amp;Add -&gt;</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btnRemove">
+         <property name="text">
+          <string>&lt;- &amp;Remove</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="Spacer3">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::Expanding</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QVBoxLayout">
+       <property name="spacing">
+        <number>6</number>
+       </property>
+       <property name="margin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="QLabel" name="TextLabel2">
+         <property name="text">
+          <string>Active:</string>
+         </property>
+         <property name="wordWrap">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QListWidget" name="lstActive"/>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QVBoxLayout">
+       <property name="spacing">
+        <number>6</number>
+       </property>
+       <property name="margin">
+        <number>0</number>
+       </property>
+       <item>
+        <spacer name="Spacer4">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::Expanding</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btnUp">
+         <property name="text">
+          <string>&amp;Up</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btnDown">
+         <property name="text">
+          <string>&amp;Down</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="Spacer5">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::Expanding</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </item>
     </layout>
-  </widget>
-  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+   </item>
+   <item>
+    <widget class="Line" name="Line1">
+     <property name="frameShape">
+      <enum>QFrame::HLine</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Sunken</enum>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout">
+     <property name="spacing">
+      <number>6</number>
+     </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
+     <item>
+      <spacer name="Spacer4_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Expanding</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btnApply">
+       <property name="text">
+        <string>&amp;Apply</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btnOk">
+       <property name="text">
+        <string>&amp;OK</string>
+       </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btnClose">
+       <property name="text">
+        <string>&amp;Close</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+  </layout>
+ </widget>
+ <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <resources/>
+ <connections/>
 </ui>
